# Doramagic

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INDEX.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  TODOS.md  btc_monitor.py  doramagic_session_20260321.txt  install.sh  models.json  models.json.example  platform_rules.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bricks/: BRICK_INVENTORY.md  django.jsonl  domain_info_ingestion.jsonl  home_assistant.jsonl  react.jsonl
data/fixtures/: README.md  example_calorie_repo_facts_calorie.json  example_calorie_stage1_output_calorie.json  platform_rules.json  sim2_discovery_result.json  sim2_need_profile.json  sim2_snapshot_input.json  sim3_need_profile_flight.json
docs/: 20260320_S4_GLM5_Full_Integration_WorkLog.md  20260320_s4_full_integration_log.md  PRODUCT_MANUAL.md  dev-context-briefing.md  dev-plan-codex-module-specs.md  dev-plan-codex-reference.md  doramagic-dev-manual-v5.3.md  doramagic-product-dev-brief.md  doramagic-product-dev-requirements.md  engineering-discussion-guide.md  engineering-plan-v1.md  full-integration-dev-brief.md  multi-project-pipeline.md  pitfalls.md  product-design-adjustment.md  soul_document_template.md  supplementary-dev-brief.md
docs/brainstorm/: 20260308_cross_analysis.md  20260308_gemini_report_analysis.md  20260308_session01_brainstorm.md  20260308_session01_continued.md  20260308_session01_round3.md  20260308_session01_round4.md  20260308_session01_round5.md  20260308_session01_round6.md  20260308_session02_chat_record.md  20260308_six_reports_cross_analysis.md  20260308_soul_document_architecture_synthesis.md  20260308_soul_extraction_methodology_synthesis.md
docs/designs/: 2026-03-29-synthesis-causal-reasoning.md
docs/experiments/: README.md  exp01-minimal-pipeline-report.md  exp01-repo-selection-guide.md
docs/logs/: 2026-03-29-v12.3.0-knowledge-engine.md  2026-03-30-brick-v2-system.md  2026-03-30-product-constitution-and-audit.md  2026-03-30-v12.3.1-release.md  2026-03-30-v12.3.2-release.md  2026-03-30-v12.4.3-release.md  2026-03-30-v12.4.6-release.md  2026-04-01-skill-compliance-refactoring.md
docs/plans/: 2026-03-09-doramagic-review-and-plan.md  2026-03-09-exp01-minimal-pipeline-design.md  2026-03-09-exp01-minimal-pipeline-implementation-plan.md  2026-03-09-exp01-repo-screening-design.md  2026-03-09-exp01-repo-screening-implementation-plan.md  2026-03-09-knowledge-extraction-discussion-framework.md  2026-03-09-knowledge-extraction-execution-plan.md  2026-03-09-technical-decision-report-design.md  2026-03-09-technical-decision-report-implementation-plan.md  2026-03-09-three-party-synthesis.md  2026-03-10-soul-extractor-v09-design.md  2026-03-10-soul-extractor-v09-implementation.md  2026-03-10-soul-extractor-v09-patch.md  2026-03-11-doramagic-end-state-platform-design.md  2026-03-12-ai-knowledge-consumption-design.md  2026-03-12-ai-knowledge-consumption-implementation-plan.md  2026-03-12-soul-lego-bricks-research-implementation-plan.md  2026-03-14-ai-tool-memory-isolation-architecture-design.md  20260320_full_landing_plan.md
docs/research/: 2026-03-09-doramagic-technical-decision-report.md  20260308_codex_code_soul_workflow_design.md  20260308_codex_deep_research_report.md  20260308_codex_soul_document_architecture_design.md  20260308_codex_soul_extraction_detailed_plan.md  20260308_codex_tech_stack_design.md  20260308_doramagic_preresearch_report_v0.1.md  20260308_gemini_community_sources_research.md  20260308_gemini_deep_research_report.md  20260308_gemini_deepwiki_research.md  20260308_gemini_market_gap_research.md  20260308_gemini_repomix_research.md  20260308_gemini_soul_document_architecture_research.md  20260308_gemini_soul_extraction_methodology_research.md  20260308_llm_first_soul_extraction_technical_report.md  20260308_soul_extraction_technical_report.md  20260309_doramagic_ultimate_research_report.md  20260309_openclaw_real_user_research.md  20260309_openclaw_user_scenarios_research.md  20260309_optimized_extraction_prompts.md  20260309_unsaid_competitive_moat_research.md  20260309_unsaid_knowledge_extraction_research.md  20260314_doramagic_partial_coverage_super_report.md  20260314_doramagic_v4_product_definition.html  20260314_doramagic_v4_product_definition.md  20260315_doramagic_v5_product_definition.md  20260315_good_homework_selection_research_report.md  20260315_misleading_good_homework_dark_traps_report.md  20260318_doramagic_v5_product_definition_review_report.md  generate-v5-pdf.py  prompt_codex.md  prompt_gemini.md
experiments/exp-why-extraction/: brainstorm-gemini.md  brainstorm-prompt.md  brainstorm-synthesis.md  heatmap-research-gemini.md  heatmap-research-opus.md  heatmap.py  repo_facts_daily_stock.md  repo_facts_daily_stock_v2.md  repo_facts_funNLP.md  repo_facts_funNLP_v2.md  repo_facts_vnpy.md  repo_facts_vnpy_v2.md  stage0-simple.sh  stage0-v2.sh  why-extraction-prompt-v2.md  why-extraction-prompt.md  why_daily_stock.md  why_daily_stock_gemini.md  why_daily_stock_gemini_v2.md  why_daily_stock_gemini_v3.md  why_daily_stock_v2.md  why_daily_stock_v3.md  why_funNLP.md  why_funNLP_gemini.md  why_funNLP_gemini_v2.md  why_funNLP_gemini_v3.md  why_funNLP_v2.md  why_funNLP_v3.md  why_vnpy.md  why_vnpy_gemini.md  why_vnpy_gemini_v2.md  why_vnpy_gemini_v3.md  why_vnpy_v2.md  why_vnpy_v3.md
experiments/exp01/: SUMMARY.md
knowledge/: __init__.py
research/: ai-agent-engineering-consensus.md  calorie-skill-assembly.md  cross-analysis-9-projects.py  generate-calorie-skill-pdf.py  heatmap-9-projects-v2.py  heatmap-9-projects.py  heatmap-sim2-sim3.py  public-apis-catalog.xlsx  soul-extractions-summary.md
scripts/: brick_forge.py  doramagic_singleshot.py  knowledge_accumulator.py  publish_preflight.sh  real_data_smoke_test.py  repomix_prototype.py
tests/: test_contracts.py  test_doramagic_pipeline.py  test_e2e_smoke.py  test_fixtures.py  test_v1211_smoke.py
(+657 files in other folders)
