[project]
name = "doramagic"
version = "12.1.5"
description = "Doramagic - Knowledge extraction and skill forging system"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]
# E=pycodestyle, F=pyflakes, I=isort, W=warnings
# B=bugbear(常见陷阱), UP=pyupgrade(现代语法), SIM=simplify, RUF=ruff专属
# RUF001/002/003: 忽略全角标点检查(项目文档字符串使用中文)

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
# 类型检查覆盖范围：从 contracts 起步，逐步扩展
# 下一步目标：添加 controller, shared_utils
[[tool.mypy.overrides]]
module = "doramagic_contracts.*"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
python_files = ["test_*.py"]
[tool.ruff.lint.extend-per-file-ignores]
"packages/racekit/tests/test_racekit.py" = ["E402"]
"packages/extraction/tests/test_stage15_agentic.py" = ["E501"]
# stage15 拆分后各模块的预存 lint 问题
"packages/extraction/doramagic_extraction/stage15_agentic.py" = ["E402", "E501", "SIM113"]
"packages/extraction/doramagic_extraction/stage15_agentic_gemini.py" = ["E402", "E501", "F401", "I001", "W293"]
"packages/extraction/doramagic_extraction/llm_stage_runner.py" = ["E501"]
"packages/extraction/doramagic_extraction/stage15_tools.py" = ["E402", "E501", "F841", "SIM105", "SIM108", "UP030"]
"packages/extraction/doramagic_extraction/stage15_explorer.py" = ["E402", "E501", "F841", "SIM103", "SIM105"]
"packages/extraction/doramagic_extraction/stage15_artifacts.py" = ["E402", "E501", "UP030", "SIM103", "SIM105"]
"packages/extraction/doramagic_extraction/stage15_config.py" = ["E501"]
# doramagic_product 是 2328 行的并行管道，待第三优先级拆分
"packages/doramagic_product/doramagic_product/pipeline.py" = ["E501", "UP030", "F524", "B007", "SIM102", "SIM103", "SIM105", "SIM108", "SIM110", "SIM113", "SIM118", "SIM910"]
