[project]
name = "doramagic"
version = "12.2.0"
description = "Doramagic - Knowledge extraction and skill forging system"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]
# E=pycodestyle, F=pyflakes, I=isort, W=warnings
# B=bugbear(常见陷阱), UP=pyupgrade(现代语法), SIM=simplify, RUF=ruff专属
# RUF001/002/003: 忽略全角标点检查(项目文档字符串使用中文)

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
# 类型检查覆盖范围：从 contracts 起步，逐步扩展
# 下一步目标：添加 controller, shared_utils
[[tool.mypy.overrides]]
module = "doramagic_contracts.*"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
python_files = ["test_*.py"]
[tool.ruff.lint.extend-per-file-ignores]
# --- 测试文件（sys.path.insert + 长 fixture 行 + 前向引用） ---
"tests/test_doramagic_pipeline.py" = ["E402", "E501", "F821", "UP037"]
"tests/test_e2e_smoke.py" = ["E741"]
"tests/test_v1211_smoke.py" = ["E402", "E501", "F821", "SIM102"]
"packages/racekit/tests/test_racekit.py" = ["E402"]
"packages/extraction/tests/test_stage15_agentic.py" = ["E501"]
"packages/extraction/tests/test_confidence_system.py" = ["E402"]
"packages/extraction/tests/test_dsd.py" = ["E402", "E501"]
"packages/extraction/tests/test_knowledge_compiler.py" = ["E402", "E501", "RUF"]
"packages/extraction/tests/test_brick_injection.py" = ["E402", "E741", "F841"]
"packages/extraction/tests/test_stage15_agentic_gemini.py" = ["E402", "E501"]
"packages/extraction/tests/test_stage15_integration.py" = ["E501", "E741"]
"packages/cross_project/tests/test_discovery_gemini.py" = ["E402"]
"packages/cross_project/tests/test_synthesis.py" = ["E501"]
"packages/cross_project/tests/test_synthesis_gemini.py" = ["E402", "RUF005"]
"packages/platform_openclaw/tests/test_validator.py" = ["B905"]
"packages/platform_openclaw/tests/test_validator_glm5.py" = ["E501"]
"packages/preextract_api/tests/test_app.py" = ["E402"]
# --- stage15 拆分后各模块 ---
"packages/extraction/doramagic_extraction/stage15_agentic.py" = ["E402", "E501", "SIM113"]
"packages/extraction/doramagic_extraction/stage15_agentic_gemini.py" = ["E402", "E501", "F401", "I001", "W293"]
"packages/extraction/doramagic_extraction/llm_stage_runner.py" = ["E501"]
"packages/extraction/doramagic_extraction/stage15_tools.py" = ["E402", "E501", "F841", "SIM105", "SIM108", "UP030"]
"packages/extraction/doramagic_extraction/stage15_explorer.py" = ["E402", "E501", "F841", "SIM103", "SIM105"]
"packages/extraction/doramagic_extraction/stage15_artifacts.py" = ["E402", "E501", "UP030", "SIM103", "SIM105"]
"packages/extraction/doramagic_extraction/stage15_config.py" = ["E501"]
# --- extraction 源码 ---
"packages/extraction/doramagic_extraction/brick_injection.py" = ["B007"]
"packages/extraction/doramagic_extraction/knowledge_compiler.py" = ["B007", "E501", "E741"]
"packages/extraction/doramagic_extraction/stage0.py" = ["B007"]
"packages/extraction/doramagic_extraction/stage1_scan.py" = ["E501"]
# --- shared_utils ---
"packages/shared_utils/doramagic_shared_utils/llm_adapter.py" = ["E501", "RUF005", "UP038"]
"packages/shared_utils/doramagic_shared_utils/capability_router.py" = ["E402", "E501", "F821"]
"packages/shared_utils/doramagic_shared_utils/runtime_paths.py" = ["SIM108"]
"packages/shared_utils/tests/test_llm_retry.py" = ["E501"]
# --- controller ---
"packages/controller/doramagic_controller/flow_controller.py" = ["E402"]
"packages/controller/doramagic_controller/budget_manager.py" = ["E501"]
"packages/controller/doramagic_controller/input_router.py" = ["RUF012"]
"packages/controller/doramagic_controller/lease_manager.py" = ["SIM103"]
"packages/controller/doramagic_controller/state_definitions.py" = ["UP042"]
# --- executors ---
"packages/executors/doramagic_executors/repo_type_classifier.py" = ["SIM102"]
"packages/executors/doramagic_executors/repo_worker.py" = ["F841", "SIM105"]
"packages/executors/doramagic_executors/soul_extractor_batch.py" = ["E501", "SIM105"]
"packages/executors/doramagic_executors/worker_supervisor.py" = ["E501"]
"packages/executors/doramagic_executors/delivery_packager.py" = ["E501"]
# --- cross_project ---
"packages/cross_project/doramagic_cross_project/discovery.py" = ["E402"]
"packages/cross_project/doramagic_cross_project/compare.py" = ["UP030"]
"packages/cross_project/doramagic_cross_project/discovery_gemini.py" = ["F821", "SIM102", "UP037"]
"packages/cross_project/doramagic_cross_project/synthesis.py" = ["E501", "RUF005", "UP030"]
"packages/cross_project/doramagic_cross_project/synthesis_gemini.py" = ["E501"]
# --- orchestration（废弃包，仅维护不新增） ---
"packages/orchestration/doramagic_orchestration/assemble_output.py" = ["B007", "E501", "E741"]
"packages/orchestration/doramagic_orchestration/phase_runner.py" = ["E501", "RUF"]
"packages/orchestration/doramagic_orchestration/phase_runner_gemini.py" = ["RUF013"]
"packages/orchestration/doramagic_orchestration/validate_extraction.py" = ["E501", "SIM102", "SIM115"]
# --- platform / compiler / racekit ---
"packages/platform_openclaw/doramagic_platform_openclaw/validator.py" = ["E501"]
"packages/platform_openclaw/doramagic_platform_openclaw/validator_glm5.py" = ["E501", "SIM108"]
"packages/skill_compiler/doramagic_skill_compiler/compiler.py" = ["E501"]
"packages/racekit/doramagic_racekit/race_config.py" = ["UP042"]
"packages/racekit/doramagic_racekit/race_review.py" = ["E501", "UP030"]
"packages/racekit/doramagic_racekit/race_workspace.py" = ["RUF005", "UP030"]
# --- community / domain_graph ---
"packages/community/doramagic_community/community_signals.py" = ["E501", "E741"]
"packages/domain_graph/doramagic_domain_graph/snapshot_builder.py" = ["E501", "UP030"]
"packages/contracts/doramagic_contracts/__init__.py" = ["E402", "F401"]
"packages/contracts/doramagic_contracts/envelope.py" = ["UP046"]
# --- preextract_api（未完工） ---
"packages/preextract_api/doramagic_preextract_api/app_gemini.py" = ["B008"]
"packages/controller/tests/test_flow_controller.py" = ["E402", "E501", "F821"]
"packages/preextract_api/doramagic_preextract_api/app.py" = ["E402", "F821"]
"packages/preextract_api/doramagic_preextract_api/app_sonnet.py" = ["E402", "F821"]
"packages/executors/tests/test_progress_events.py" = ["E402"]
"packages/extraction/tests/test_stage15_strategy.py" = ["E402"]
# --- doramagic_product（2328 行并行管道，待拆分） ---
"packages/doramagic_product/doramagic_product/pipeline.py" = ["B007", "E402", "E501", "F524", "SIM102", "SIM103", "SIM105", "SIM108", "SIM110", "SIM113", "SIM118", "SIM910", "UP030"]
